--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,10 +1,13 @@
-
 table {
-    width: 100%;
+  width: 100%;
 }
 
-mat-header-cell.mat-sort-header-sorted {
-    color: black;
-  }
-  
-  
+.mat-sort-header-sorted {
+   color: black;
+ }
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+  margin: 10px;
+}
